feat(spin-java-module): add @Named @Configuration support for common javadoc options
Introduces @Named @Configuration properties (author, version, nodeprecated,
enable-preview) for the common javadoc plugin tasks shared by
Java25CompilerPlugin.JavaDoc and Java8CompilerPlugin.JavaDoc, replacing the
previously unused Optional<Properties> "coming soon" stub in AbstractJavaDoc.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>